# deepforest-modal-app

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  program.md  pyproject.toml  results.tsv  train.py
.devcontainer/: devcontainer.json  pod-template.yaml  setup.sh
.github/workflows/: release.yml  tests.yml
deepforest_modal_app/: __init__.py  eval_utils.py  plot_utils.py  settings.py
docs/: advanced-customizations.ipynb  api.md  conf.py  crop-model.ipynb  deepforest_utils.py  environment.yml  getting-started.ipynb  index.md  plot_utils.py  treeai-example.ipynb  treeai_utils.py  usage.md  user-guide.md
