[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"

[project]
name = "deepforest-modal-app"
version = "0.1.0"
description = "Modal app for training and inference of DeepForest models"
readme = "README.md"
authors = [
  {email = "marti.bosch@epfl.ch", name = "Martí Bosch"}
]
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13"
]
requires-python = ">=3.10"
dependencies = [
  "geopandas >= 1.0.0",
  "modal == 1.3.1",
  "numpy >= 2.0.0",
  "pandas < 3.0.0",
  "rasterio >= 1.0.0"
]

[project.license]
text = "GPL-3.0"

[project.optional-dependencies]
dev = [
  "build",
  "commitizen",
  "pip",
  "pre-commit",
  "toml",
  "tox",
  "twine"
]
doc = [
  "myst-parser",
  "nbsphinx",
  "pydata-sphinx-theme",
  "sphinx",
  "sphinxemoji"
]
test = [
  "coverage[toml]",
  "pytest",
  "pytest-cov",
  "ruff"
]
user-guide = [
  "comet-ml",
  "faster-coco-eval",
  "ipywidgets",
  "matplotlib",
  "openpyxl",
  "pooch",
  "pycocotools",
  "uv"
]

[project.urls]
Repository = "https://github.com/martibosch/deepforest-modal-app"

[tool.codespell]
ignore-regex = '^\s*"image\/png":\s.*'
skip = "CHANGELOG.md,pixi.lock"

[tool.commitizen]
major_version_zero = true
name = "cz_conventional_commits"
tag_format = "v$version"
version_provider = "pep621"
version_scheme = "semver"

[tool.coverage.report]
exclude_lines = [
  "if self.debug:",
  "pragma: no cover",
  "raise NotImplementedError",
  "except ModuleNotFoundError",
  "except ImportError"
]
ignore_errors = true
omit = ["tests/*", "docs/conf.py"]

[tool.coverage.run]
source = ["deepforest_modal_app"]

[tool.pixi.dependencies]
python = ">=3.10,<3.13"
gdal = ">=3"
ipykernel = ">=7.1.0,<8"
scikit-learn = ">=1.8.0,<2"

[tool.pixi.environments]
dev = ["dev"]
doc = ["doc"]
test = ["test"]
user-guide = ["user-guide"]

[tool.pixi.feature.dev.tasks]
build = "python -m build"
check = {cmd = "twine check dist/*", depends-on = ["build"]}

[tool.pixi.feature.doc.tasks]
build-doc = "sphinx-build docs docs/_build"

[tool.pixi.feature.test.tasks]
# use dotenv to set api keys as env. vars
test = "pytest -s --cov=deepforest_modal_app --cov-report=xml tests"

[tool.pixi.feature.user-guide.dependencies]
pytorch-lightning = ">=2.6.1,<3"
scipy = ">=1.17.0,<2"

[tool.pixi.pypi-dependencies]
deepforest_modal_app = {path = ".", editable = true}

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "win-64"]

[tool.ruff]
line-length = 88

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
  "D",
  "E",
  "F",
  "I"
]

[tool.ruff.lint.isort]
known-first-party = [
  "deepforest_modal_app",
  "eval_utils",
  "plot_utils",
  "treeai_utils"
]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = [
  "F401"
]
# ignore because we are mostly hard-copying from DeepForest
"deepforest_modal_app/eval_utils.py" = [
  "D205",
  "D400",
  "D401"
]
"docs/*.py" = [
  "D"
]
"tests/test_deepforest_modal_app.py" = [
  "D"
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.uv.build-backend]
module-name = "deepforest_modal_app"
module-root = ""

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
